removed animated header text

--- a/index.html
+++ b/index.html
@@ -82,12 +82,10 @@
         <section class="box-intro">
             <div class="table-cell">
                 <h1 class="box-headline letters rotate-2">
-                    <span class="box-words-wrapper">
-                        <b class="is-visible">design.</b>
-                        <b>&nbsp;coding.</b>
-                        <b>graphic.</b>
-                    </span>
+			<!--commenting out animated header-->
+                   
 		        </h1>
+		    <!-- commenting out animated header end -->
                 <h5>everything you need to build your personal portfolio</h5>
             </div>
 
