pre-editing and adding social icons
preparing to link and add behance, email, upwork shortcuts (and their respective icons.)

--- a/index.html
+++ b/index.html
@@ -71,9 +71,14 @@
                 <li class="box-label">Know more</li>
 
                 <!--<li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
-                <li class="box-social"><a href="#0"><i class="ion-social-instagram-outline"></i></a></li>
                 <li class="box-social"><a href="#0"><i class="ion-social-twitter"></i></a></li>-->
+		<li class="box-social"><a href="#0"><i class="ion-social-instagram-outline"></i></a></li>
                 <li class="box-social"><a href="#0"><i class="ion-social-dribbble"></i></a></li>
+		<!--****testing for future behance, email, and upwork icon add-ins
+		<li class="box-social"><a href="#0"><i class="ion-social-behance-outline"></i></a></li>
+		<li class="box-social"><a href="#0"><i class="ion-social-upwork-outline"></i></a></li>
+		<li class="box-social"><a href="#0"><i class="ion-social-gmail-outline"></i></a></li>
+		****-->
             </ul>
         </nav>
         <!-- end nav -->
