tweaked "know more"

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 
 
-                <li class="box-label">Know more</li>
+                <li class="box-label">Know more + hire + say hi</li>
 
                 <!--<li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
                 <li class="box-social"><a href="#0"><i class="ion-social-twitter"></i></a></li>-->
