edited icons test again
briefcase for portfolio link, power button for upwork link (as in "let's get things started")

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                 <!--<li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
                 <li class="box-social"><a href="#0"><i class="ion-social-twitter"></i></a></li>-->
 		
-                <li class="box-social"><a href="#0"><i class="ion-briefcase"></i></a></li>
-		<li class="box-social"><a href="#0"><i class="ion-social-behance-outline"></i></a></li>
+                <li class="box-social"><a href="#0"><i class="ion-power"></i></a></li>
+		<li class="box-social"><a href="https://twitter.com/wonhos_baby/status/1107115799469158401"><i class="ion-briefcase"></i></a></li>
 		    <!--****testing for future behance, email, and upwork icon add-ins
 		<li class="box-social"><a href="#0"><i class="ion-social-instagram-outline"></i></a></li>
 		<li class="box-social"><a href="#0"><i class="ion-social-upwork-outline"></i></a></li>
