updated menu icons + menu subhead
also removed the link to wonho lol <3

--- a/index.html
+++ b/index.html
@@ -68,17 +68,18 @@
 
 
 
-                <li class="box-label">Know more + hire + say hi</li>
+                <li class="box-label">say hi</li>
 
                 <!--<li class="box-social"><a href="#0"><i class="ion-social-facebook"></i></a></li>
                 <li class="box-social"><a href="#0"><i class="ion-social-twitter"></i></a></li>-->
 		
-                <li class="box-social"><a href="#0"><i class="ion-power"></i></a></li>
-		<li class="box-social"><a href="https://twitter.com/wonhos_baby/status/1107115799469158401"><i class="ion-briefcase"></i></a></li>
+		<!--<li class="box-social"><a href="https://www.behance.net/miachiar"><i class="ion-briefcase"></i></a></li>-->
+		<li class="box-social"><a href="https://www.upwork.com/fl/amiar"><i class="ion-power"></i></a></li>
 		    <!--****testing for future behance, email, and upwork icon add-ins
 		<li class="box-social"><a href="#0"><i class="ion-social-instagram-outline"></i></a></li>
 		<li class="box-social"><a href="#0"><i class="ion-social-upwork-outline"></i></a></li>
 		<li class="box-social"><a href="#0"><i class="ion-social-gmail-outline"></i></a></li>
+		<li class="box-social"><a href="#0"><i class="ion-paper-plane"></i></a></li>
 		****-->
             </ul>
         </nav>
