--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 		    
 		    <!-- commenting out animated header end -->
 		    <h5>design + branding</h5>
-		    <h5><a href="https://www.upwork.com/fl/amiar">Portfolio</a>
+		    <h5 class="portfolio-link"><a href="https://www.upwork.com/fl/amiar">Portfolio</a>
 		    </h5>
 		    
             </div>
